# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = [
    "upkit-leafops",
    "upkit-enprov",
    "upkit-enprov-selfsigned",
    "upkit-http-client",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 WITH AdditionRef-FWM-Exception-1.0.0"
version = "0.0.0"
repository = "https://github.com/mydriatech/upkit-leafops.git"
publish = false

#[profile.dev]
#opt-level = 1
#lto = "thin"
#incremental = true

[profile.release]
opt-level = 3
# https://doc.rust-lang.org/rustc/codegen-options/index.html#strip
strip = "symbols"
# Link time optimizations off->false->thin->fat
lto = "fat"
# No stack unwinding is required -> reduce size of code
panic = 'abort'
# No fast parallel processing to look for addition optimizations
# Saves a MB or so for 20 extra seconds
codegen-units = 1
# For profiling
#debug = 1
# Keep debug!() and trace!()
#debug-logging=true

[workspace.dependencies]

# Cryptographic provider
tyst = { git = "https://github.com/mydriatech/tyst.git", branch = "main" }
upkit_common = { git = "https://github.com/mydriatech/upkit-common.git", branch = "main" }

# Logging
log = { version = "0.4", default-features = false, features = ["release_max_level_debug"] }
env_logger = { version = "0.11.1", default-features = false, features = [] }

# ASN.1 https://docs.rs/rasn/latest/rasn/
rasn = { version = "0.26", default-features = false, features = []  }
rasn-pkix = { version = "0.26", default-features = false, features = []  }
rasn-cms = { version = "0.26", default-features = false, features = []  }

# Serialization
serde = { version = "1.0", default-features = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = true, features = [] }
serde_with = { version = "3.11", default-features = true, features = ["base64", "hex"] }

# Async and concurrency
crossbeam-skiplist = { version = "0.1", default-features = true }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "time"] }

# HTTP client lib
ureq = { version = "3.0", default-features = true, features = [] }
