[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "upkit_enprov"
description = "UPKIT Enrollment provider library."

[dependencies]
upkit_http_client = { path = "../upkit-http-client" }

tyst = { workspace = true, features = [] }
upkit_common = { workspace = true, features = []  }

# Async and concurrency
tokio = { workspace = true, features = []  }
crossbeam-skiplist = { workspace = true, features = [] }
#futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Logging and tracing
log = { workspace = true, features = [] }
#env_logger = { workspace = true, features = [] }

# Config and platform info
#config = { version = "0.15", default-features = false, features = ["json"] }
#cgroups-rs = "0.3"

serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
serde_with = { workspace = true, features = [] }

# REST API
#actix-web = { version = "4.6", default-features = false, features = ["macros", "http2", "compress-brotli"] }
#utoipa = { version = "5", features = ["actix_extras"] }
#serde = { version = "1.0", default-features = false, features = ["std"] }
#serde_json = "1.0"
#serde_with = { version = "3.11", default-features = true, features = ["base64"] }

#chrono = { version = "0.4", default-features = false, features = ["alloc", "now"] }
#sntpc = { version = "0.5", default-features = false, features = ["std", "tokio-socket"] }

#[dev-dependencies]
# HTTP client lib used in examples and tests
#ureq = { version = "3.0", default-features = true, features = [] }
