[package]
name = "upkit_http_client"
version = "0.0.0"
edition = "2021"
description = "UPKIT HTTP client."
license = "Apache-2.0 WITH AdditionRef-FWM-Exception-1.0.0"
publish = false

[dependencies]

#tyst_api_rest_health = { workspace = true, features = [] }
tyst = { workspace = true, features = [] }
#upkit_common = { workspace = true, features = []  }

# Async and concurrency
#tokio = { workspace = true, features = []  }
#crossbeam-skiplist = { workspace = true, features = [] }
#futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Logging and tracing
log = { workspace = true, features = [] }
#env_logger = { workspace = true, features = [] }

# Config and platform info
#config = { version = "0.15", default-features = false, features = ["json"] }
#cgroups-rs = "0.3"

# REST API
#actix-web = { version = "4.6", default-features = false, features = ["macros", "http2", "compress-brotli"] }
#utoipa = { version = "5", features = ["actix_extras"] }
#serde = { version = "1.0", default-features = false, features = ["std"] }
#serde_json = "1.0"
#serde_with = { version = "3.11", default-features = true, features = ["base64"] }

#chrono = { version = "0.4", default-features = false, features = ["alloc", "now"] }
#sntpc = { version = "0.5", default-features = false, features = ["std", "tokio-socket"] }

# HTTP client lib used in examples and tests
ureq = { version = "3.0", default-features = false, features = [] }

#[dev-dependencies]
