[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "upkit_leafops"
description = "UPKIT Leaf Operations library."

#[[bench]]
#name = "all"
#harness = false

#[package.metadata.docs.rs]
#all-features = true

[dependencies]
upkit_enprov = { path = "../upkit-enprov" }
upkit_enprov_selfsigned = { path = "../upkit-enprov-selfsigned" }
upkit_http_client = { path = "../upkit-http-client" }

tyst = { workspace = true, features = [] }

log = { workspace = true, features = [] }

[dev-dependencies]
upkit_common = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
ureq = { workspace = true, features = [] }
